Add PropertyIndexNotExistException and getPropertyName to PropertyNotExistException