@@ -37,8 +37,8 @@ import net.cabezudo.json.Position;
 import net.cabezudo.json.exceptions.JSONConversionException;
 
 /**
- * A {@link net.cabezudo.json.values.JSONString} is an object extended from {@link JSONValue} object
- * in order to represent a JSON string that can be used to create JSON structures.
+ * A {@link net.cabezudo.json.values.JSONString} is an object extended from {@link JSONValue} object in order to represent a JSON string
+ * that can be used to create JSON structures.
  *
  * @author <a href="http://cabezudo.net">Esteban Cabezudo</a>
  * @version 0.9, 10/01/2014
@@ -48,8 +48,7 @@ public class JSONString extends JSONValue<JSONString> {
   private final String value;
 
   /**
-   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object so that it
-   * represents the same string as the argument.
+   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object so that it represents the same string as the argument.
    *
    * @param value A {@code String}
    */
@@ -58,8 +57,7 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object so that it
-   * represents the same string as the argument.
+   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object so that it represents the same string as the argument.
    *
    * @param value A {@code String}
    * @param position The position of the {@code String} in origen
@@ -70,8 +68,7 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object using the
-   * {@code Character} passed as argument.
+   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object using the {@code Character} passed as argument.
    *
    * @param character A {@code Character} object.
    */
@@ -81,9 +78,8 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object using the
-   * {@code BigInteger} object passed as argument. The object conversion is made using the
-   * {@code toString()} method of the {@code BigInteger} object.
+   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object using the {@code BigInteger} object passed as argument.
+   * The object conversion is made using the {@code toString()} method of the {@code BigInteger} object.
    *
    * @param bigInteger A {@code BigInteger} object.
    */
@@ -93,9 +89,8 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object using the
-   * {@code BigDecimal} object passed as argument. The object conversion is made using the
-   * {@code toString()} method of the {@code BigDecimal} object.
+   * Initializes a newly created {@link net.cabezudo.json.values.JSONString} object using the {@code BigDecimal} object passed as argument.
+   * The object conversion is made using the {@code toString()} method of the {@code BigDecimal} object.
    *
    * @param bigDecimal A {@code BigDecimal} object.
    */
@@ -111,16 +106,13 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Compares the string values represented by two {@link net.cabezudo.json.values.JSONString}
-   * objects.
+   * Compares the string values represented by two {@link net.cabezudo.json.values.JSONString} objects.
    *
    * @param jsonString the {@link net.cabezudo.json.values.JSONString} to be compared.
-   * @return the integer value {@code 0} if the argument {@link net.cabezudo.json.values.JSONString}
-   * is equal to this {@link net.cabezudo.json.values.JSONString}; a value less than {@code 0} if
-   * this {@link net.cabezudo.json.values.JSONString} is lexicographically less than the
-   * {@link net.cabezudo.json.values.JSONString} argument; and a value greater than {@code 0} if
-   * this {@link net.cabezudo.json.values.JSONString} is lexicographically greater than the
-   * {@link net.cabezudo.json.values.JSONString} argument.
+   * @return the integer value {@code 0} if the argument {@link net.cabezudo.json.values.JSONString} is equal to this
+   * {@link net.cabezudo.json.values.JSONString}; a value less than {@code 0} if this {@link net.cabezudo.json.values.JSONString} is
+   * lexicographically less than the {@link net.cabezudo.json.values.JSONString} argument; and a value greater than {@code 0} if this
+   * {@link net.cabezudo.json.values.JSONString} is lexicographically greater than the {@link net.cabezudo.json.values.JSONString} argument.
    */
   @Override
   public int compareTo(JSONString jsonString) {
@@ -134,8 +126,7 @@ public class JSONString extends JSONValue<JSONString> {
    *
    * @param object The object to compare this {@code String} against
    *
-   * @return {@code true} if the given object represents a {@code String} equivalent to this string,
-   * {@code false} otherwise
+   * @return {@code true} if the given object represents a {@code String} equivalent to this string, {@code false} otherwise
    */
   @Override
   public boolean equals(Object object) {
@@ -154,9 +145,8 @@ public class JSONString extends JSONValue<JSONString> {
 
   /**
    * /**
-   * Returns {@code this} {@link net.cabezudo.json.values.JSONString} object, a non referenced
-   * {@link net.cabezudo.json.values.JSONString} object is the same object than a referenced
-   * {@link net.cabezudo.json.values.JSONString} object because is not an JSON object to be
+   * Returns {@code this} {@link net.cabezudo.json.values.JSONString} object, a non referenced {@link net.cabezudo.json.values.JSONString}
+   * object is the same object than a referenced {@link net.cabezudo.json.values.JSONString} object because is not an JSON object to be
    * referenced.
    *
    * @return The element whose referenceable objects have been replaced with their references.
@@ -167,8 +157,8 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Returns a hash code for this string. The hash code for a
-   * {@link net.cabezudo.json.values.JSONString} is the same hash that a {@code String} object.
+   * Returns a hash code for this string. The hash code for a {@link net.cabezudo.json.values.JSONString} is the same hash that a
+   * {@code String} object.
    *
    * @return a hash code value for this object.
    */
@@ -178,8 +168,8 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Returns if the JSON element is a {@link net.cabezudo.json.values.JSONString}. This object
-   * represent a JSON string, so allways return a true.
+   * Returns if the JSON element is a {@link net.cabezudo.json.values.JSONString}. This object represent a JSON string, so allways return a
+   * true.
    *
    * @return {@code true} because the object is a {@link net.cabezudo.json.values.JSONString}.
    */
@@ -189,8 +179,8 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Convert the {@link net.cabezudo.json.values.JSONString} into an array of {@link JSONValue}
-   * objects. The result array is an array of only one element, the {@code this} object.
+   * Convert the {@link net.cabezudo.json.values.JSONString} into an array of {@link JSONValue} objects. The result array is an array of
+   * only one element, the {@code this} object.
    *
    * @return an array of {@link net.cabezudo.json.values.JSONValue} with a single element.
    */
@@ -202,15 +192,12 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Try to create, using the {@code BigDecimal} constructor, a {@code BigDecimal} object using the
-   * {@code BigDecimal} rules for {@code String} and throw a {@code NumberFormatException} if the
-   * {@link net.cabezudo.json.values.JSONString} don't have a valid representation for a {code
-   * BigDecimal}.
+   * Try to create, using the {@code BigDecimal} constructor, a {@code BigDecimal} object using the {@code BigDecimal} rules for
+   * {@code String} and throw a {@code NumberFormatException} if the {@link net.cabezudo.json.values.JSONString} don't have a valid
+   * representation for a {code BigDecimal}.
    *
-   * @return a {code BigDecimal} result to translate the {@code String} represented in
-   * {@link net.cabezudo.json.values.JSONString}.
-   * @throws NumberFormatException if {@code value} is not a valid representation of a
-   * {@code BigDecimal}.
+   * @return a {code BigDecimal} result to translate the {@code String} represented in {@link net.cabezudo.json.values.JSONString}.
+   * @throws NumberFormatException if {@code value} is not a valid representation of a {@code BigDecimal}.
    */
   @Override
   public BigDecimal toBigDecimal() {
@@ -218,15 +205,12 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Try to create, using the {@code BigInteger} constructor, a {@code BigInteger} object using the
-   * {@code BigInteger} rules for {code String} and throw a {@code NumberFormatException} if the
-   * {@link net.cabezudo.json.values.JSONString} don't have a valid representation for a {code
-   * BigInteger}.
+   * Try to create, using the {@code BigInteger} constructor, a {@code BigInteger} object using the {@code BigInteger} rules for {code
+   * String} and throw a {@code NumberFormatException} if the {@link net.cabezudo.json.values.JSONString} don't have a valid representation
+   * for a {code BigInteger}.
    *
-   * @return a {code BigInteger} result to translate the {@code String} represented in
-   * {@link net.cabezudo.json.values.JSONString}.
-   * @throws NumberFormatException if {@code value} is not a valid representation of a
-   * {@code BigInteger}.
+   * @return a {code BigInteger} result to translate the {@code String} represented in {@link net.cabezudo.json.values.JSONString}.
+   * @throws NumberFormatException if {@code value} is not a valid representation of a {@code BigInteger}.
    */
   @Override
   public BigInteger toBigInteger() {
@@ -234,12 +218,11 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Returns a {@code Boolean} with the boolean value represented by the specified string. The
-   * {@code Boolean} returned represents a true value if the string represented in {@code this} is
-   * not {@code null} and is equal, ignoring case, to the string {@code true}.
+   * Returns a {@code Boolean} with the boolean value represented by the specified string. The {@code Boolean} returned represents a true
+   * value if the string represented in {@code this} is not {@code null} and is equal, ignoring case, to the string {@code true}.
    *
-   * @return a {code Boolean} result to convert, using {@code Boolean#valueOf()}, the {@code String}
-   * represented in {@link net.cabezudo.json.values.JSONString}.
+   * @return a {code Boolean} result to convert, using {@code Boolean#valueOf()}, the {@code String} represented in
+   * {@link net.cabezudo.json.values.JSONString}.
    */
   @Override
   public Boolean toBoolean() {
@@ -247,23 +230,21 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Constructs an return a newly allocated {@code Byte} object that represents the value indicated
-   * by the {@code String} value in the {@link net.cabezudo.json.values.JSONString}. The string is
-   * converted to a {@code Byte} value in exactly the manner used by the {@code parseByte} method
-   * for radix 10.
+   * Constructs an return a newly allocated {@code Byte} object that represents the value indicated by the {@code String} value in the
+   * {@link net.cabezudo.json.values.JSONString}. The string is converted to a {@code Byte} value in exactly the manner used by the
+   * {@code parseByte} method for radix 10.
    *
    * @return the value of this {@link net.cabezudo.json.values.JSONString} as a {@code Byte}.
    * @throws NumberFormatException if the {@code String} does not contain a parseable {@code Byte}.
    */
   @Override
   public Byte toByte() {
-    return new Byte(value);
+    return Byte.valueOf(value);
   }
 
   /**
-   * Convert the {@link net.cabezudo.json.values.JSONString} into an array of {@code byte}
-   * primitives. The result array is an array of only one element, the converted value of
-   * {@code this} object.
+   * Convert the {@link net.cabezudo.json.values.JSONString} into an array of {@code byte} primitives. The result array is an array of only
+   * one element, the converted value of {@code this} object.
    *
    * @return an array of {@link JSONValue} with a only one element.
    */
@@ -275,14 +256,12 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Constructs an return a newly allocated {@code Calendar} object that represents the value
-   * indicated by the {@code String} represented in the {@link net.cabezudo.json.values.JSONString}.
-   * The string is converted to a {@code Calendar} value using the {@code SimpleDateFormat}
+   * Constructs an return a newly allocated {@code Calendar} object that represents the value indicated by the {@code String} represented in
+   * the {@link net.cabezudo.json.values.JSONString}. The string is converted to a {@code Calendar} value using the {@code SimpleDateFormat}
    * {@code parse} method and the pattern specified for {@link JSON#SIMPLE_DATE_FORMAT_PATTERN}.
    *
    * @return the value of this {@link net.cabezudo.json.values.JSONString} as a {@code Calendar}.
-   * @throws JSONConversionException if the {@code String} does not contain a parseable
-   * {@code Calendar}.
+   * @throws JSONConversionException if the {@code String} does not contain a parseable {@code Calendar}.
    */
   @Override
   public Calendar toCalendar() {
@@ -305,9 +284,8 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Convert the {@link net.cabezudo.json.values.JSONString} into a {@code Character} object using
-   * the {@code this} value. The result {@code Character} is a {@code Character} object created with
-   * the first character of the value {@code String}.
+   * Convert the {@link net.cabezudo.json.values.JSONString} into a {@code Character} object using the {@code this} value. The result
+   * {@code Character} is a {@code Character} object created with the first character of the value {@code String}.
    *
    * @return a {@code Character}.
    * @exception IndexOutOfBoundsException if the value {@code String} length is less than one.
@@ -319,51 +297,47 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Constructs an return a newly allocated {@code Double} object that represents the value
-   * indicated by the {@code String} represented in the {@link net.cabezudo.json.values.JSONString}.
-   * The string is converted to a {@code Double} using the {@code Double} constructor.
+   * Constructs an return a newly allocated {@code Double} object that represents the value indicated by the {@code String} represented in
+   * the {@link net.cabezudo.json.values.JSONString}. The string is converted to a {@code Double} using the {@code Double} constructor.
    *
    * @return the value of this {@link net.cabezudo.json.values.JSONString} as a {@code Double}.
-   * @throws NumberFormatException if the {@code String} value of {@code this}
-   * {@link net.cabezudo.json.values.JSONString} does not contain a parseable double number.
+   * @throws NumberFormatException if the {@code String} value of {@code this} {@link net.cabezudo.json.values.JSONString} does not contain
+   * a parseable double number.
    */
   @Override
   public Double toDouble() {
-    return new Double(value);
+    return Double.valueOf(value);
   }
 
   /**
-   * Constructs an return a newly allocated {@code Float} object that represents the value indicated
-   * by the {@code String} represented in the {@link net.cabezudo.json.values.JSONString}. The
-   * string is converted to a {@code Float} using the {@code Float} constructor.
+   * Constructs an return a newly allocated {@code Float} object that represents the value indicated by the {@code String} represented in
+   * the {@link net.cabezudo.json.values.JSONString}. The string is converted to a {@code Float} using the {@code Float} constructor.
    *
    * @return the value of this {@link net.cabezudo.json.values.JSONString} as a {@code Float}.
-   * @throws NumberFormatException if the {@code String} value of {@code this}
-   * {@link net.cabezudo.json.values.JSONString} does not contain a parseable float number.
+   * @throws NumberFormatException if the {@code String} value of {@code this} {@link net.cabezudo.json.values.JSONString} does not contain
+   * a parseable float number.
    */
   @Override
   public Float toFloat() {
-    return new Float(value);
+    return Float.valueOf(value);
   }
 
   /**
-   * Constructs an return a newly allocated {@code Integer} object that represents the value
-   * indicated by the {@code String} represented in the {@link net.cabezudo.json.values.JSONString}.
-   * The string is converted to a {@code Integer} using the {@code Integer} constructor.
+   * Constructs an return a newly allocated {@code Integer} object that represents the value indicated by the {@code String} represented in
+   * the {@link net.cabezudo.json.values.JSONString}. The string is converted to a {@code Integer} using the {@code Integer} constructor.
    *
    * @return the value of this {@link net.cabezudo.json.values.JSONString} as a {@code Integer}.
-   * @throws NumberFormatException if the {@code String} value of {@code this}
-   * {@link net.cabezudo.json.values.JSONString} does not contain a parseable integer number.
+   * @throws NumberFormatException if the {@code String} value of {@code this} {@link net.cabezudo.json.values.JSONString} does not contain
+   * a parseable integer number.
    */
   @Override
   public Integer toInteger() {
-    return new Integer(value);
+    return Integer.valueOf(value);
   }
 
   /**
-   * Return a {@code String} with the value of {@code this}
-   * {@link net.cabezudo.json.values.JSONString} object converted to a JSON valid representation. A
-   * JSON string is always a string in double quotes. This method is used to create JSON strings.
+   * Return a {@code String} with the value of {@code this} {@link net.cabezudo.json.values.JSONString} object converted to a JSON valid
+   * representation. A JSON string is always a string in double quotes. This method is used to create JSON strings.
    *
    * @return a {@code String} with the JSON formated {@code String}.
    */
@@ -376,11 +350,9 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Convert the {@link net.cabezudo.json.values.JSONString} into a
-   * {@link net.cabezudo.json.values.JSONArray} object. The result is a
-   * {@link net.cabezudo.json.values.JSONArray} with only one
-   * {@link net.cabezudo.json.values.JSONString} created with the value of {@code this}
-   * {@link net.cabezudo.json.values.JSONString} object.
+   * Convert the {@link net.cabezudo.json.values.JSONString} into a {@link net.cabezudo.json.values.JSONArray} object. The result is a
+   * {@link net.cabezudo.json.values.JSONArray} with only one {@link net.cabezudo.json.values.JSONString} created with the value of
+   * {@code this} {@link net.cabezudo.json.values.JSONString} object.
    *
    * @return a {@link net.cabezudo.json.values.JSONArray} with only one element.
    */
@@ -390,9 +362,8 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Constructs an return a newly allocated {@link net.cabezudo.json.values.JSONString} object that
-   * represents the value indicated by the {@code String} value of {@code this}
-   * {@link net.cabezudo.json.values.JSONString}. The string is created using the
+   * Constructs an return a newly allocated {@link net.cabezudo.json.values.JSONString} object that represents the value indicated by the
+   * {@code String} value of {@code this} {@link net.cabezudo.json.values.JSONString}. The string is created using the
    * {@link net.cabezudo.json.values.JSONString} constructor.
    *
    * @return a {@link net.cabezudo.json.values.JSONString}.
@@ -403,9 +374,8 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Convert the {@link net.cabezudo.json.values.JSONString} into an {@code ArrayList} of
-   * {@link net.cabezudo.json.values.JSONValue} objects. The result list has only one element, the
-   * {@code this} object.
+   * Convert the {@link net.cabezudo.json.values.JSONString} into an {@code ArrayList} of {@link net.cabezudo.json.values.JSONValue}
+   * objects. The result list has only one element, the {@code this} object.
    *
    * @return an {@code ArrayList} of {@link net.cabezudo.json.values.JSONValue} objects.
    */
@@ -417,37 +387,34 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Constructs an return a newly allocated {@code Long} object that represents the value indicated
-   * by the {@code String} represented in the {@link net.cabezudo.json.values.JSONString}. The
-   * string is converted to a {@code Long} using the {@code Long} constructor.
+   * Constructs an return a newly allocated {@code Long} object that represents the value indicated by the {@code String} represented in the
+   * {@link net.cabezudo.json.values.JSONString}. The string is converted to a {@code Long} using the {@code Long} constructor.
    *
    * @return the value of this {@link net.cabezudo.json.values.JSONString} as a {@code Long}.
-   * @throws NumberFormatException if the {@code String} value of {@code this}
-   * {@link net.cabezudo.json.values.JSONString} does not contain a parseable long number.
+   * @throws NumberFormatException if the {@code String} value of {@code this} {@link net.cabezudo.json.values.JSONString} does not contain
+   * a parseable long number.
    */
   @Override
   public Long toLong() {
-    return new Long(value);
+    return Long.valueOf(value);
   }
 
   /**
-   * Constructs an return a newly allocated {@code Short} object that represents the value indicated
-   * by the {@code String} represented in the {@link net.cabezudo.json.values.JSONString}. The
-   * string is converted to a {@code Short} using the {@code Short} constructor.
+   * Constructs an return a newly allocated {@code Short} object that represents the value indicated by the {@code String} represented in
+   * the {@link net.cabezudo.json.values.JSONString}. The string is converted to a {@code Short} using the {@code Short} constructor.
    *
    * @return the value of this {@link net.cabezudo.json.values.JSONString} as a {@code Short}.
-   * @throws NumberFormatException if the {@code String} value of {@code this}
-   * {@link net.cabezudo.json.values.JSONString} does not contain a parseable short number.
+   * @throws NumberFormatException if the {@code String} value of {@code this} {@link net.cabezudo.json.values.JSONString} does not contain
+   * a parseable short number.
    */
   @Override
   public Short toShort() {
-    return new Short(value);
+    return Short.valueOf(value);
   }
 
   /**
-   * Returns a string representation of the {@code this} object. The string representation for the
-   * object is the {@code String} represented for the {@link net.cabezudo.json.values.JSONString}
-   * object and is the same object that the internal {@code String} value of the object.
+   * Returns a string representation of the {@code this} object. The string representation for the object is the {@code String} represented
+   * for the {@link net.cabezudo.json.values.JSONString} object and is the same object that the internal {@code String} value of the object.
    *
    * @return a {@code String} representation of the value of {@code this} object.
    */
@@ -457,8 +424,8 @@ public class JSONString extends JSONValue<JSONString> {
   }
 
   /**
-   * Convert the {@link net.cabezudo.json.values.JSONString} into an array of {@code String}
-   * objects. The result array is an array with only one element, the {@code this} object.
+   * Convert the {@link net.cabezudo.json.values.JSONString} into an array of {@code String} objects. The result array is an array with only
+   * one element, the {@code this} object.
    *
    * @return an array of {@code String} with a single element.
    */
